# EE400-projeto

./: .gitignore  README.MD  main.tex
.relatorio/: bibliografia.bib  main.bbl  main.blg  main.tex
.relatorio/sections/: consideracoes.tex  exercises.tex  introduction.tex  project.tex
.relatorio/sections/exercicios/: exercicio1.tex  exercicio2.tex  exercicio3.tex
projeto_b/: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
projeto_b/include/: writePNG.h
projeto_b/src/: juliaSerial.cpp  juliaThreads.cpp  main.cpp  mandelbrot  mandelbrotSerial.cpp  mandelbrotThread.cpp  speedup_fractal.py  writePNG.c
